[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Boost/Boost.gd" type="Script" id=1]
[ext_resource path="res://Objects/Boost/BG Circle.png" type="Texture" id=2]
[ext_resource path="res://Objects/Boost/Boost.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Boost" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[connection signal="body_entered" from="." to="." method="_on_Boost_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Boost_body_exited"]
